force-app/main/default/objects/Lead/fields/Certificacoes__c.field-meta.xml
<CustomField>
    <fullName>Certificacoes__c</fullName>
    <label>Certificações</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>