force-app/main/default/objects/Lead/fields/Data_de_Graduacao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Graduacao__c</fullName>
    <label>Data de Graduação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jun/2027</fullName>
            </value>
            <value>
                <fullName>Dez/2027</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>