force-app/main/default/objects/Lead/fields/Nivel_de_Ingles__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Ingles__c</fullName>
    <label>Nível de Inglês</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intermediário</fullName>
            </value>
            <value>
                <fullName>Avançado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>