force-app/main/default/objects/Lead/fields/Perfil_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Perfil_LinkedIn__c</fullName>
    <label>Perfil do LinkedIn</label>
    <type>Url</type>
</CustomField>