force-app/main/default/objects/Lead/fields/Perfil_Trailhead__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Trailhead__c</fullName>
    <label>Perfil do Trailhead</label>
    <type>Url</type>
</CustomField>